# devops-study-app

./: .gitignore  .release-please-manifest.json  README.md  ReadMe.md  mise.toml  release-please-config.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  update-gitops.yaml
kubernetes/: setup_cluster_gitops
scripts/: setup  setup_cluster_gitops  setup_deploy_key  setup_gitops  setup_project  update_kustomize_tag
src/backend/: CHANGELOG.md  pyproject.toml
src/backend/src/backend/: main.py
src/frontend/: CHANGELOG.md  pyproject.toml
src/frontend/src/frontend/: main.py
