[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Babu Macharia", email = "babu.macharia@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
