[project]
name = "study-tracker-backend"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Babu Macharia", email = "babu@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.12",
  "uvicorn>=0.34.2",
]

[project.scripts]
study-tracker-api = "backend.main:main"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
